# Ti_Py

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  readme.md
include/: main.hpp  py.hpp  pysdl.hpp  pysystem.hpp  pyvars.hpp  sdl.hpp
include/frontend/: statusbar.hpp
include/tool/: log.hpp  text.hpp
src/: main.cpp  py.cpp  pysdl.cpp  pysystem.cpp  pyvars.cpp  sdl.cpp
src/frontend/: statusbar.cpp
src/tool/: log.cpp  text.cpp
